# dota2-cast-assist

./: .gitignore  CONTRIBUTING.md  DEVELOPERS.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: publish.yml  test-and-lint.yml
app/: core.py  main.py  prestart.sh  start.sh
app/templates/: example_page.html  example_stats.json  test1.html
common/: helpers.py  logging_config.py  pubsub.py  secret_keys.py  settings.py  steam_api.py
events_processor/: dataflow_job.py  setup.py
events_processor/libs/: firestore.py
healthcheck/: health_check.py  healthcheck.sh
k8s/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  service.yaml
k8s/gke/: backend-config.yaml  deployment-patch.yaml  ingress-patch.yaml  kustomization.yaml  managed-cert.yaml  service-patch.yaml
k8s/local/: deployment-patch.yaml  kustomization.yaml  service-patch.yaml
live_matches_crawler/: crawler.py  cron.py
tests/: test_healch_check.py
